--- a/style2.css
+++ b/style2.css
@@ -7,13 +7,13 @@
   --color-pink: #fe918d;
   --color-dark-pink: #ff6863;
   --color-black: #4d4d4d;
-  --color-dark-grey: #757575;
+  --color-dark-grey: #4d4d4d;
   --color-grey: #616161;
-  --color-light-grey: #dcdcdc;
+  --color-light-grey: #7c7979;
+  --color-blue: #73aace;
   --color-yellow: #fff7d1;
   --color-orange: #feb546;
   --color-black: #000000;
-  --color-blue: #90bbd8;
 
   /* Font size */
   --font-large: 48px;
@@ -23,7 +23,7 @@
   --font-micro: 14px;
 
   /* Font weight */
-  --weigt-bold: 700;
+  --weight-bold: 700;
   --weight-semi-bold: 600;
   --weight-regular: 400;
 
@@ -40,9 +40,8 @@
 }
 
 body {
-  font-family: 'Lato', sans-serif;  
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
-  cursor: default;
 }
 
 a {
@@ -51,8 +50,11 @@ a {
 }
 
 ul {
-  list-style: none;
   padding-left: 0;
+}
+
+li {
+  list-style: none;
 }
 
 button {
@@ -93,24 +95,11 @@ p {
 
 /* Navbar */
 #navbar {
-  position: fixed;
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 16px;
-  background-color: transparent;
-  transition: all var(--animation-duration) ease-in-out;
-}
-
-#navbar.navbar--dark {
-  background-color: var(--color-blue);
-  padding: 8px;
-}
-
-.navbar__menu {
-  display: flex;
-
+  background-color: var(--color-pink);
 }
 
 .navbar__logo {
@@ -119,25 +108,30 @@ p {
   color: white;
 }
 
+.navbar__menu {
+  display: flex;
+}
+
 .navbar__menu__item {
   padding: 8px 12px;
   margin: 0 4px;
+  color: var(--color-white);
   cursor: pointer;
 }
 
 .navbar__menu__item.active {
-  border: 1px solid var(--color-white);
+  border: 1px solid white;
   border-radius: var(--size-border-radius);
 }
 
 .navbar__menu__item:hover {
-  background-color: var(--color-blue);
-  border-radius: 4px;
+  background-color: var(--color-dark-pink);
+  border-radius: var(--size-border-radius);
 }
 
 .navbar__toggle-btn {
   position: absolute;
-  top: 38px;
+  top: 24px;
   right: 32px;
   font-size: 24px;
   color: var(--color-white);
@@ -148,13 +142,14 @@ p {
 #home {
   background: url('imgs/home-background.png') center/cover no-repeat;
   padding: 40px;
-  padding-top: 100px;
   text-align: center;
 }
 
 .home__avatar {
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
 }
 
 .home__title,
@@ -165,11 +160,11 @@ p {
 .home__contact {
   color: var(--color-white);
   font-size: var(--font-regular);
-  font-weight: var(--weight-semi-bold);
+  font-weight: var(--weight-bold);
   margin: 24px;
   padding: 8px 12px;
   border: 2px solid var(--color-white);
-  border-radius: var(--size-border-radius); 
+  border-radius: var(--size-border-radius);
 }
 
 /* Section common */
@@ -200,18 +195,19 @@ p {
   color: var(--color-blue);
   border: 1px solid var(--color-blue);
   border-radius: 50%;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 
 .major__icon i {
   transition: all var(--animation-duration) ease;
 }
 
-.major__icon:hover i{
+.major__icon:hover i {
   color: var(--color-pink);
-  transform: rotate(-20deg) scale(1.1);
+  transform: rotate(-30deg) scale(1.1);
 }
-.major__title, 
+
+.major__title,
 .major__description {
   color: var(--color-dark-grey);
 }
@@ -220,13 +216,12 @@ p {
   font-size: var(--font-small);
 }
 
-
 .job {
   display: flex;
   align-items: center;
 }
 
-.job_description {
+.job__description {
   margin: 0 16px;
   text-align: left;
 }
@@ -235,6 +230,7 @@ p {
 .job__period {
   color: var(--color-light-grey);
 }
+
 .job__name {
   font-size: var(--font-small);
 }
@@ -246,7 +242,7 @@ p {
 /* Skill */
 
 #skills {
-  background-color: var(--color-blue);
+  background-color: var(--color-yellow);
 }
 
 .skillset {
@@ -259,7 +255,6 @@ p {
 .skillset__title {
   color: var(--color-white);
 }
-
 .skillset__left {
   flex-basis: 60%;
   background-color: var(--color-dark-grey);
@@ -276,12 +271,12 @@ p {
 
 .skill__bar {
   width: 100%;
-  height: 10px;
+  height: 3px;
   background-color: var(--color-grey);
 }
 
 .skill__value {
-  height: 10px;
+  height: 3px;
   background-color: var(--color-orange);
 }
 
@@ -291,6 +286,11 @@ p {
 
 .tools {
   background-color: var(--color-grey);
+}
+
+.tools,
+.etc {
+  padding: 20px;
 }
 
 /* Work */
@@ -308,8 +308,14 @@ p {
 
 .category__btn.active,
 .category__btn:hover {
-  background-color: var(--color-blue);
+  background-color: var(--color-pink);
   color: var(--color-white);
+}
+
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+  opacity: 1;
+  top: 0;
 }
 
 .category__count {
@@ -327,7 +333,7 @@ p {
   transition: all var(--animation-duration) ease-in;
 }
 
-.work__progects {
+.work__projects {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -362,7 +368,7 @@ p {
   left: 0;
   opacity: 0;
   transform: translateY(10px);
-  transition: all var(--animation-duration);
+  transition: all var(--animation-duration) ease-in;
 }
 
 .project:hover .project__description {
@@ -383,7 +389,7 @@ p {
   height: 2px;
   margin-left: -12px;
   margin-top: 8px;
-  background-color: var(--color-dark-width);
+  background-color: var(--color-dark-white);
 }
 
 /* Testimonial */
@@ -397,12 +403,40 @@ p {
 
 .testimonial {
   display: flex;
+  margin: 32px 0;
 }
 
+.testimonial__avatar {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.testimonial__avatar:nth-child(odd) {
+  margin-right: 40px;
+}
+
+.testimonial__avatar:nth-child(even) {
+  margin-left: 40px;
+}
+
+.testimonial__speech-bubble {
+  padding: 18px;
+  background-color: var(--color-white);
+  border-radius: var(--size-border-radius);
+}
+
+.testimonial__speech-bubble p {
+  color: var(--color-light-grey);
+}
+
+.testimonial__speech-bubble a {
+  color: var(--color-pink);
+}
 
 /* Contact */
-#contact{
-  background-color: var(--color-blue);
+#contact {
+  background-color: var(--color-pink);
 }
 
 .contact__title,
@@ -418,7 +452,7 @@ p {
 .contact__links {
   font-size: var(--font-large);
   margin: 24px 0;
-  transition: all var(--animation-duration) ease;
+  transition: all var(--animation-duration) ease-in;
 }
 
 .contact__links i:hover {
@@ -460,5 +494,8 @@ p {
     flex-grow: 1;
   }
 
-
+  .testimonial__avatar {
+    width: 80px;
+    height: 80px;
+  }
 }
