--- a/style3.css
+++ b/style3.css
@@ -7,13 +7,13 @@
   --color-pink: #fe918d;
   --color-dark-pink: #ff6863;
   --color-black: #4d4d4d;
-  --color-dark-grey: #757575;
-  --color-grey: #424546;
-  --color-light-grey: #9ea7aa;
+  --color-dark-grey: #4d4d4d;
+  --color-grey: #616161;
+  --color-light-grey: #7c7979;
+  --color-blue: #73aace;
   --color-yellow: #fff7d1;
   --color-orange: #feb546;
   --color-black: #000000;
-  --color-blue: #8dafaf;
 
   /* Font size */
   --font-large: 48px;
@@ -23,7 +23,7 @@
   --font-micro: 14px;
 
   /* Font weight */
-  --weigt-bold: 700;
+  --weight-bold: 700;
   --weight-semi-bold: 600;
   --weight-regular: 400;
 
@@ -40,9 +40,8 @@
 }
 
 body {
-  font-family: 'Lato', sans-serif;  
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
-  cursor: default;
 }
 
 a {
@@ -51,8 +50,11 @@ a {
 }
 
 ul {
-  list-style: none;
   padding-left: 0;
+}
+
+li {
+  list-style: none;
 }
 
 button {
@@ -101,23 +103,22 @@ p {
   padding: 16px;
   background-color: transparent;
   transition: all var(--animation-duration) ease-in-out;
+  z-index: 1;
 }
 
 #navbar.navbar--dark {
-  background-color: var(--color-blue);
+  background-color: var(--color-pink);
   padding: 8px;
-}
-
-.navbar__menu {
-  display: flex;
-  color: white;
-
 }
 
 .navbar__logo {
   font-size: var(--font-medium);
   font-weight: var(--weight-semi-bold);
   color: white;
+}
+
+.navbar__menu {
+  display: flex;
 }
 
 .navbar__menu__item {
@@ -145,31 +146,32 @@ p {
 
 /* Home */
 #home {
-  background: url('imgs/home-background5.jpg') center/cover no-repeat;
+  background: url('imgs/home-background.png') center/cover no-repeat;
   padding: 40px;
-  padding-top: 500px;
-  text-align: right;
+  padding-top: 120px;
+  text-align: center;
 }
 
 .home__avatar {
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
 }
 
 .home__title,
 .home__description {
   color: var(--color-white);
-  padding: 20px;
 }
 
 .home__contact {
   color: var(--color-white);
   font-size: var(--font-regular);
-  font-weight: var(--weight-semi-bold);
+  font-weight: var(--weight-bold);
   margin: 24px;
   padding: 8px 12px;
   border: 2px solid var(--color-white);
-  border-radius: var(--size-border-radius); 
+  border-radius: var(--size-border-radius);
 }
 
 /* Section common */
@@ -180,10 +182,8 @@ p {
 }
 
 .section__container {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: auto;
-  line-height: 70px;
-  word-spacing: 2px;
 }
 
 /* About */
@@ -202,18 +202,19 @@ p {
   color: var(--color-blue);
   border: 1px solid var(--color-blue);
   border-radius: 50%;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 
 .major__icon i {
   transition: all var(--animation-duration) ease;
 }
 
-.major__icon:hover i{
+.major__icon:hover i {
   color: var(--color-pink);
-  transform: rotate(-20deg) scale(1.1);
+  transform: rotate(-30deg) scale(1.1);
 }
-.major__title, 
+
+.major__title,
 .major__description {
   color: var(--color-dark-grey);
 }
@@ -222,13 +223,12 @@ p {
   font-size: var(--font-small);
 }
 
-
 .job {
   display: flex;
   align-items: center;
 }
 
-.job_description {
+.job__description {
   margin: 0 16px;
   text-align: left;
 }
@@ -237,6 +237,7 @@ p {
 .job__period {
   color: var(--color-light-grey);
 }
+
 .job__name {
   font-size: var(--font-small);
 }
@@ -248,7 +249,7 @@ p {
 /* Skill */
 
 #skills {
-  background-color: var(--color-blue);
+  background-color: var(--color-yellow);
 }
 
 .skillset {
@@ -261,7 +262,6 @@ p {
 .skillset__title {
   color: var(--color-white);
 }
-
 .skillset__left {
   flex-basis: 60%;
   background-color: var(--color-dark-grey);
@@ -278,12 +278,12 @@ p {
 
 .skill__bar {
   width: 100%;
-  height: 10px;
+  height: 3px;
   background-color: var(--color-grey);
 }
 
 .skill__value {
-  height: 10px;
+  height: 3px;
   background-color: var(--color-orange);
 }
 
@@ -292,15 +292,13 @@ p {
 }
 
 .tools {
-  background-color: var(--color-light-grey);
-  padding: 20px;
+  background-color: var(--color-grey);
 }
 
+.tools,
 .etc {
-  background-color: var(--color-light-grey);
   padding: 20px;
 }
-
 
 /* Work */
 
@@ -315,10 +313,16 @@ p {
   padding: 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
-  background-color: var(--color-blue);
+  background-color: var(--color-pink);
   color: var(--color-white);
+}
+
+.category__btn.selected .category__count,
+.category__btn:hover .category__count {
+  opacity: 1;
+  top: 0;
 }
 
 .category__count {
@@ -336,10 +340,17 @@ p {
   transition: all var(--animation-duration) ease-in;
 }
 
-.work__progects {
+.work__projects {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
+}
+
+.work__projects.anim-out {
+  opacity: 0;
+  transform: scale(0.96) translateY(40px);
 }
 
 .project {
@@ -351,6 +362,10 @@ p {
   height: 250px;
   margin: 2px;
   background-color: var(--color-light-white);
+}
+
+.project.invisible {
+  display: none;
 }
 
 .project__img {
@@ -371,7 +386,7 @@ p {
   left: 0;
   opacity: 0;
   transform: translateY(10px);
-  transition: all var(--animation-duration);
+  transition: all var(--animation-duration) ease-in;
 }
 
 .project:hover .project__description {
@@ -380,7 +395,7 @@ p {
 }
 
 .project__description h3 {
-  color: var(--color-white);
+  color: var(--color-orange);
 }
 
 .project__description h3:after {
@@ -388,11 +403,11 @@ p {
   display: block;
   position: relative;
   left: 50%;
-  width: 25px;
+  width: 50px;
   height: 2px;
-  margin-left: -12px;
+  transform: translateX(-50%);
   margin-top: 8px;
-  background-color: var(--color-dark-width);
+  background-color: var(--color-dark-white);
 }
 
 /* Testimonial */
@@ -406,12 +421,40 @@ p {
 
 .testimonial {
   display: flex;
+  margin: 32px 0;
 }
 
+.testimonial__avatar {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.testimonial__avatar:nth-child(odd) {
+  margin-right: 40px;
+}
+
+.testimonial__avatar:nth-child(even) {
+  margin-left: 40px;
+}
+
+.testimonial__speech-bubble {
+  padding: 18px;
+  background-color: var(--color-white);
+  border-radius: var(--size-border-radius);
+}
+
+.testimonial__speech-bubble p {
+  color: var(--color-light-grey);
+}
+
+.testimonial__speech-bubble a {
+  color: var(--color-pink);
+}
 
 /* Contact */
-#contact{
-  background-color: var(--color-blue);
+#contact {
+  background-color: var(--color-pink);
 }
 
 .contact__title,
@@ -427,12 +470,33 @@ p {
 .contact__links {
   font-size: var(--font-large);
   margin: 24px 0;
-  transition: all var(--animation-duration) ease;
+  transition: all var(--animation-duration) ease-in;
 }
 
 .contact__links i:hover {
   transform: scale(1.1);
   color: var(--color-yellow);
+}
+
+/* Scroll */
+.arrow-up {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 70px;
+  height: 70px;
+  font-size: 50px;
+  color: var(--color-white);
+  background-color: var(--color-pink);
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 300ms ease-in;
+}
+
+.arrow-up.visible {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 /* For below 768px screen width */
@@ -444,13 +508,21 @@ p {
   #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-pink);
   }
 
+  #navbar.navbar--dark {
+    padding: 16px;
+  }
   .navbar__menu {
     flex-direction: column;
     text-align: center;
     width: 100%;
     display: none;
+  }
+
+  .navbar__menu.open {
+    display: block;
   }
 
   .about__majors {
@@ -469,5 +541,8 @@ p {
     flex-grow: 1;
   }
 
-
+  .testimonial__avatar {
+    width: 80px;
+    height: 80px;
+  }
 }
