JS: navbar menu toggle

--- a/style.css
+++ b/style.css
@@ -478,11 +478,18 @@ p {
     align-items: flex-start;
   }
 
+  #navbar.navbar--dark {
+    padding: 16px;
+  }
   .navbar__menu {
     flex-direction: column;
     text-align: center;
     width: 100%;
     display: none;
+  }
+
+  .navbar__menu.open {
+    display: block;
   }
 
   .about__majors {
