--- a/style.css
+++ b/style.css
@@ -173,6 +173,10 @@ p {
   border-radius: var(--size-border-radius); 
 }
 
+.home__contact:hover {
+  background-color: var(--color-blue);
+}
+
 /* Section common */
 .section {
   padding: 50px;
@@ -314,12 +318,19 @@ p {
   border-radius: var(--size-border-radius);
   font-size: var(--font-regular);
   padding: 8px 48px;
+  position: relative;
 }
 
-.category__btn.slected,
+.category__btn.selected,
 .category__btn:hover {
   background-color: var(--color-blue);
   color: var(--color-white);
+}
+
+.category__btn.selected .category__count,
+.category__btn:hover .category__count {
+  opacity: 1;
+  top: 0;
 }
 
 .category__count {
@@ -332,7 +343,7 @@ p {
   display: inline-block;
   position: relative;
   top: -20px;
-  left: 4px;
+  left: 8px;
   opacity: 0;
   transition: all var(--animation-duration) ease-out;
 }
@@ -469,8 +480,37 @@ p {
 
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
+  :root {
+    /* Font size */
+    --font-large: 30px;
+    --font-medium: 18px;
+    --font-reqular: 16px;
+    --font-small: 14px;
+    --font-micro: 12px;
+  }
+
+  .navbar__menu__item {
+    padding: 8px 12px;
+    margin: 0 4px;
+    color: var(--color-white);
+    cursor: pointer;
+    border-radius: var(--size-border-radius);
+  }
+
+  .navabar__menu__item.active {
+    border: 1px solid var(--color-white);
+  }
+
+  .navbar__menu__item:hover {
+    border-color: var(--color-white);
+    background-color: var(--color-grey);
+  }
+
   .navbar__toggle-btn {
     display: block;
+    top: 16px;
+    right: 16px;
+    font-size: var(--font-medium);
   }
 
   #navbar {
@@ -494,14 +534,20 @@ p {
 
   .about__majors {
     flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 0px;
   }
 
   .major {
-    margin-bottom: 38px;
+    margin-bottom: 30px;
   }
 
   .skillset {
     flex-direction: column;
+  }
+
+  .category__btn {
+    margin: 4px 0;
   }
 
   .project {
