--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
   --color-pink: #fe918d;
   --color-dark-pink: #ff6863;
   --color-black: #4d4d4d;
-  --color-dark-grey: #757575;
-  --color-grey: #424546;
+  --color-dark-grey: #232323;
+  --color-grey: #4e4e4e;
   --color-light-grey: #9ea7aa;
   --color-yellow: #fff7d1;
   --color-orange: #feb546;
@@ -105,7 +105,7 @@ p {
 }
 
 #navbar.navbar--dark {
-  background-color: var(--color-blue);
+  background-color: var(--color-dark-grey);
   padding: 8px;
 }
 
@@ -146,7 +146,7 @@ p {
 
 /* Home */
 #home {
-  background: url('imgs/home-background5.jpg') center/cover no-repeat;
+  background: url('imgs/mainimage0001.jpg') center/cover no-repeat;
   padding: 40px;
   padding-top: 300px;
   text-align: right;
@@ -221,6 +221,7 @@ p {
 .major__title, 
 .major__description {
   color: var(--color-dark-grey);
+  justify-content: space-between;
 }
 
 .major__description {
@@ -253,59 +254,20 @@ p {
 /* Skill */
 
 #skills {
-  background-color: var(--color-blue);
-}
-
-.skillset {
   display: flex;
-  background-color: var(--color-light-grey);
-  color: var(--color-light-white);
-  margin: 20px 0;
+}
+.skills__container {
+  margin-left: auto;
 }
 
-.skillset__title {
-  color: var(--color-white);
+.skill__left {
+ display: flex;
+ justify-content: center;
 }
 
-.skillset__left {
-  flex-basis: 60%;
-  background-color: var(--color-dark-grey);
-  padding: 20px 40px;
+.skill__list__name {
+  font-family: fontawesome;
 }
-
-.skill {
-  margin-bottom: 32px;
-}
-.skill__description {
-  display: flex;
-  justify-content: space-between;
-}
-
-.skill__bar {
-  width: 100%;
-  height: 10px;
-  background-color: var(--color-grey);
-}
-
-.skill__value {
-  height: 10px;
-  background-color: var(--color-orange);
-}
-
-.skillset__right {
-  flex-basis: 40%;
-}
-
-.tools {
-  background-color: var(--color-light-grey);
-  padding: 20px;
-}
-
-.etc {
-  background-color: var(--color-light-grey);
-  padding: 20px;
-}
-
 
 /* Work */
 
@@ -497,7 +459,7 @@ p {
     border-radius: var(--size-border-radius);
   }
 
-  .navabar__menu__item.active {
+  .navbar__menu__item.active {
     border: 1px solid var(--color-white);
   }
 
