--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ p {
 
 .home__contact {
   color: var(--color-white);
-  font-size: var(--font-regular);
+  font-size: var(--font-medium);
   font-weight: var(--weight-semi-bold);
   margin: 24px;
   padding: 8px 12px;
@@ -210,8 +210,7 @@ p {
 .about__majors {
   display: flex;
   justify-content: space-between;
-  max-width: 1000px;
-  margin: 80px 0;
+  margin: 100px 100px;
   line-height: 40px;
   word-spacing: 2px;
 }
