--- a/style.css
+++ b/style.css
@@ -182,13 +182,14 @@ p {
 }
 
 /* Section common */
+
 .section {
-  padding: 50px;
   text-align: center;
   margin: auto;
 }
 
 .section__container {
+  padding: 50px;
   max-width: 1000px;
   margin: auto;
   line-height: 80px;
@@ -202,6 +203,7 @@ p {
 /* Skills */
 
 #skills {
+  padding: 50px;
   background-color: var(--color-dark-grey);
   color: var(--color-white);
   
@@ -254,10 +256,21 @@ p {
 
 
 .slidepic {
-  width: 700px;
+  width: 100%;
   height: 400px;
+  object-fit: cover;
 }
 
+.slidepic:hover  {
+  width: 100%;
+  height: 400px;
+  object-fit: contain;
+ 
+}
+
+.slidepic:after {
+  transition: all .5s ease;
+}
 
 
 /* Testimonial */
@@ -394,9 +407,6 @@ p {
     margin: 4px 0;
   }
 
-  .project {
-    flex-grow: 1;
-  }
 
 
 }
