--- a/style.css
+++ b/style.css
@@ -254,22 +254,38 @@ p {
 /* Work */
 
 
-
 .slidepic {
   width: 100%;
   height: 400px;
   object-fit: cover;
 }
 
-.slidepic:hover  {
+.slidepic .static {
+
   width: 100%;
   height: 400px;
-  object-fit: contain;
- 
+  object-fit: cover;
+}
+.slidepic .animated {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  display: none
 }
 
-.slidepic:after {
-  transition: all .5s ease;
+.slidepic:hover .animated {
+
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  display: inline
+}
+
+.slidepic:hover .static {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  display: none
 }
 
 
